--- a/index.html
+++ b/index.html
@@ -1,14 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Library</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <script src="library.js" defer></script>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <div class="container">
+      <div class="sidebar">
+        <form class="form-container" action="post">
+            <label for="bookTitle">Title:</label>
+            <input type="text" name="bookTitle">
+
+            <label for="bookAuthor">Author:</label>
+            <input type="text" name="bookAuthor">
+
+            <label for="bookGenre">Genre:</label>
+            <input type="text" name="bookGenre">
+            
+            <input type="button" value="Add Book">
+        </form>
+      </div>
+      <div class="header"></div>
+      <div class="library-container">
+        <div class="book-card">
+            <h3>Book Title</h3>
+            <p>by Author</p>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
