Removed redundancy with temp data and added it directly to main array, added function to create bookcard element for function to populate the page

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <label for="bookAuthor">Author:</label>
             <input type="text" name="bookAuthor">
 
-            <label for="bookGenre">Genre:</label>
-            <input type="text" name="bookGenre">
+            <!-- <label for="bookGenre">Genre:</label>
+            <input type="text" name="bookGenre"> -->
             
             <input type="button" value="Add Book">
         </form>
