--- a/index.html
+++ b/index.html
@@ -7,29 +7,62 @@
 
     <link rel="stylesheet" href="style.css" />
     <script src="library.js" defer></script>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="container">
       <div class="sidebar">
         <form class="form-container" action="post">
-            <label for="bookTitle">Title:</label>
-            <input type="text" name="bookTitle">
+          <h1>New Book</h1>
 
-            <label for="bookAuthor">Author:</label>
-            <input type="text" name="bookAuthor">
+          <label for="bookTitle">Title:</label>
+          <input type="text" name="bookTitle" />
 
-            <!-- <label for="bookGenre">Genre:</label>
-            <input type="text" name="bookGenre"> -->
-            
-            <input type="button" value="Add Book">
+          <label for="bookAuthor">Author:</label>
+          <input type="text" name="bookAuthor" />
+
+          <label for="bookGenre">Genre:</label>
+          <input type="text" name="bookGenre" />
+
+          <label for="bookPages">Number of pages:</label>
+          <input type="text" name="bookPages" />
+
+          <div class="checkbox-container">
+            <label for="bookRead">Has been read:</label>
+            <input type="checkbox" name="bookRead" />
+          </div>
+          <button class="submit-button">Add Book</button>
         </form>
       </div>
-      <div class="header"></div>
-      <div class="library-container">
-        <div class="book-card">
-            <h3>Book Title</h3>
-            <p>by Author</p>
+      <div class="header">
+        <h1>My Library</h1>
+        <div class="search-bar-container">
+          <input class="search-bar" />
+          <div class="search-bar-button">
+            <svg
+              class="search-bar-icon"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 24 24"
+            >
+              <title>magnify</title>
+              <path
+                d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"
+              />
+            </svg>
+          </div>
         </div>
+      </div>
+      <div class="library-container">
+        <!-- <div class="book-card">
+          <h3>Book Title</h3>
+          <p>by Author</p>
+        </div> -->
       </div>
     </div>
   </body>
