Added more styles to the page regarding book cards, added functions to search for book object in array and toggle if read and delete objects

--- a/index.html
+++ b/index.html
@@ -59,9 +59,39 @@
         </div>
       </div>
       <div class="library-container">
-        <!-- <div class="book-card">
-          <h3>Book Title</h3>
-          <p>by Author</p>
+        <!-- <div class="book-card-container">
+          <div class="book-card">
+            <div class="book-card-edge">
+              <div class="circle-border">
+                <svg
+                  class="circle-checked"
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 24 24"
+                >
+                  <title>check-circle</title>
+                  <path
+                    d="M12 2C6.5 2 2 6.5 2 12S6.5 22 12 22 22 17.5 22 12 17.5 2 12 2M10 17L5 12L6.41 10.59L10 14.17L17.59 6.58L19 8L10 17Z"
+                  />
+                </svg>
+              </div>
+            </div>
+            <div class="book-card-info">
+              <h2 class="title">One Hundred Years of Solitude</h2>
+              <p class="author">Author:</p>
+              <p class="pages">Pages: 100</p>
+              <p class="genre">Genre: Fiction</p>
+              <svg
+                class="delete-icon"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+              >
+                <title>delete</title>
+                <path
+                  d="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z"
+                />
+              </svg>
+            </div>
+          </div>
         </div> -->
       </div>
     </div>
